Iniciado la prueba de cobertura con el plugin que muestra la cobertura que se realizan sobre las funcioones generadas.

--- a/doc/Monitorizacion.tex
+++ b/doc/Monitorizacion.tex
@@ -83,6 +83,10 @@ Actualmente se encuentran implementadas las pruebas sencillas de JUnit implement
 
 Todos los errores localizados, modificaciones necesarias, etc. pueden encontrarse referenciados en el documento de CHANGELOG.txt, en el cual se encuentran las correcciones hasta el momento.
 
+En la primera semana, la cobertura de las pruebas como se aprecia en la imagen es pobre:\\
+\includegraphics[width=15cm]{Imagenes/CoberturaSemana1.png} \\
+Se deben realizar pruebas con junit de la mayoría de las clases, dando prioridad a las que tienen menos porcentaje de cobertura.
+
 \section{Estadísticas}
 
 \begin{itemize}
