Se reallizan los test que faltaban para obtener una cobertura de los test del 100%

--- a/doc/Monitorizacion.tex
+++ b/doc/Monitorizacion.tex
@@ -76,16 +76,17 @@ Este documento hace referencia a las pruebas realizadas sobre el proyecto de la 
 Listaxe de funcionalidades actuais, as súas especificacións, as persoas responsables do seu desenvolvemento, e as persoas responsables do proceso de proba.  Para cada funcionalidade: número de probas obxectivo, número de probas preparadas, porcentaxe executada e porcentaxe superada. Se esta información é profusa e se almacena noutra fonte, referencia á fonte. Se é cambiante, referencia a unha \emph{shapshot} ou resumo do mais destacado.
 
 \section{Registro de pruebas}
-
 Actualmente se encuentran implementadas las pruebas sencillas de JUnit implementadas en la primera semana del proyecto.
+\subsection{Cobertura}
+Realizada la prueba de cobertura de pruebas, se observa que faltan muchos test por implementar, por lo que se procede a implementar los test que faltan, según la información que nos ofrece el plugin de ecobertura.\\
+\includegraphics[width=15cm]{Imagenes/CoberturaSemana1.png} \\
+
+
 
 \section{Registro de errores}
 
 Todos los errores localizados, modificaciones necesarias, etc. pueden encontrarse referenciados en el documento de CHANGELOG.txt, en el cual se encuentran las correcciones hasta el momento.
 
-En la primera semana, la cobertura de las pruebas como se aprecia en la imagen es pobre:\\
-\includegraphics[width=15cm]{Imagenes/CoberturaSemana1.png} \\
-Se deben realizar pruebas con junit de la mayoría de las clases, dando prioridad a las que tienen menos porcentaje de cobertura.
 
 \section{Estadísticas}
 
