Actualizado documento de monitorización de pruebas

--- a/doc/Monitorizacion.tex
+++ b/doc/Monitorizacion.tex
@@ -81,7 +81,18 @@ Actualmente se encuentran implementadas las pruebas sencillas de JUnit implement
 Realizada la prueba de cobertura de pruebas, se observa que faltan muchos test por implementar, por lo que se procede a implementar los test que faltan, según la información que nos ofrece el plugin de ecobertura.\\
 \includegraphics[width=15cm]{Imagenes/CoberturaSemana1.png} \\
 
+Después de:
+\begin{itemize}
+	\item Aumentar cobertura de Anuncio (casi al 100%)
+	\item Aumentar cobertura de ServidorNormal (al 100%)
+	\item Aumentar cobertura de ServidorGenerico (casi al 100%)
+	\item Aumentar cobertura de Token 
+	\item Aumentar cobertura de ServidorConPadres
+\end{itemize}
 
+Quedó:
+
+\includegraphics[width=15cm]{Imagenes/CoberturaSemana2.png} \\
 
 \section{Registro de errores}
 
