Añadido al documento de monitorización de pruebas un enlace a los informes de PIT.

--- a/doc/Monitorizacion.tex
+++ b/doc/Monitorizacion.tex
@@ -25,6 +25,7 @@
 \usepackage{color} % Para usar colores
 \usepackage{hyperref} % Para manejar referencias cruzadas. P.ej. añadir hiperenlaces al índice
 
+
 \begin{document}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -93,6 +94,12 @@ Después de:
 Quedó:
 
 \includegraphics[width=15cm]{Imagenes/CoberturaSemana2.png} \\
+
+\subsection{PIT (mutation testing)}
+
+Realizado el mutation testing, resultados:
+
+\href{Informes/PIT1/index.html}{Informe PIT} \\
 
 \section{Registro de errores}
 
