Enlace inicial finds bug

--- a/doc/Monitorizacion.tex
+++ b/doc/Monitorizacion.tex
@@ -116,7 +116,12 @@ Realizado el mutation testing, resultados:
 
 \href{Informes/PIT1/index.html}{Informe PIT} \\
 
+\subsection{FindBugs}
 
+FindBugs es un programa que utiliza el análisis estático para buscar errores en el código de Java.
+
+En la versión inicial podemos comprobar que tenemos los siguientes errores:
+\href{Informes/SiteTestInicial/findbugs.html}{Informe Find bugs} \\
 
 \section{Registro de errores}
 
