Añadimos datos de mejoria de la cobertura

--- a/doc/Monitorizacion.tex
+++ b/doc/Monitorizacion.tex
@@ -97,7 +97,7 @@
 	Realizada la prueba de cobertura de pruebas, se observa que faltan muchos test por implementar, por lo que se procede a implementar los test que faltan, según la información que nos ofrece el plugin de ecobertura.\\
 	\includegraphics[width=15cm]{Imagenes/CoberturaSemana1.png} \\
 	
-	Después de:
+	Después utilizar Junit para:
 	\begin{itemize}
 		\item Aumentar cobertura de Anuncio (casi al 100%)
 		\item Aumentar cobertura de ServidorNormal (al 100%)
@@ -105,11 +105,14 @@
 		\item Aumentar cobertura de Token 
 		\item Aumentar cobertura de ServidorConPadres
 	\end{itemize}
-	
-	Quedó:
+Quedó:
 	
 	\includegraphics[width=15cm]{Imagenes/CoberturaSemana2.png} \\
 	
+	Después de realizar pruebas más exhautivas con junit y genenarlas con generadores a través de Quickcheck, de realizar pruebas de rendimiento con JETM, obtenemos mejores valores de cobertura:
+	Resultado:
+	
+	\includegraphics[width=15cm]{Imagenes/Covertura3.png} \\
 	\subsection{PIT (mutation testing)}
 	
 	Realizado el mutation testing, resultados:
