Conclusiones estado actual

--- a/doc/Monitorizacion.tex
+++ b/doc/Monitorizacion.tex
@@ -127,7 +127,7 @@
 		\end{itemize}
 	
 	El objetivo es probar que todas estas funciones funcionan correctamente, para ello aplicaremos pruebas de unidad, pruebas dinámicas, pruebas de rendimiento y chequearemos el estilo de programación.
-	El objetivo es ayudarnos con plugins para poder automatizar o obtener informes del estado de nuestra aplicación y aplicar acciones correctivas si obtenemos bugs.
+	Después de aplicarle las herramientas de pruebas y utilizar las herramientas de validación como cobertura y PIT creemos que nuestras funciones son estables y que puede que tengamos una bastantes pruebas realizadas y el código testeado para fiarnos de él. 
 	
 	\section{Registro de pruebas}
 	\subsection{Pruebas unidad: JUnit}
