Se añade documentacion que faltaba e imagenes

--- a/doc/Monitorizacion.tex
+++ b/doc/Monitorizacion.tex
@@ -228,8 +228,9 @@
 	\subsection{Pruebas no funcionales: JETM}
 	Resultado del rendimiento de JETM:
 	href{Informes/SiteTestInicial/jetm-timing-report.html}{Informe JETM} \\
-	
-	
+
+	\includegraphics[width=16cm]{Imagenes/JETM1.png} \\
+	\includegraphics[width=16cm]{Imagenes/JETM2.png} \\
 	\subsection{Validación de calidad de las pruebas (mutación testing): PIT}
 	Realizado el mutation testing, resultados:
 	
