Actualizado resultados de JETM

--- a/doc/Monitorizacion.tex
+++ b/doc/Monitorizacion.tex
@@ -231,6 +231,7 @@
 
 	\includegraphics[width=16cm]{Imagenes/JETM1.png} \\
 	\includegraphics[width=16cm]{Imagenes/JETM2.png} \\
+	Con JETM hemos tenido problemas  a la hora de que nos genera el site todos los resultados de las pruebas. Sí genera los resultados guardandolos en un xml con todos los resultados, pero no los muestra en la página de resultados del site.
 	\subsection{Validación de calidad de las pruebas (mutación testing): PIT}
 	Realizado el mutation testing, resultados:
 	
